basic_services/jobs/outer_jobs/db_synchronizer/prod/00-db-synchronizer-deployment.prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "db-synchronizer"
  namespace: "leaf-image-management-system"
  labels:
    app: "db-synchronizer"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "db-synchronizer"
  template:
    metadata:
      labels:
        app: "db-synchronizer"
    spec:
      containers:
        - name: "db-synchronizer"
          image: "12221994/db_synchronizer_job:latest"
          ports:
            - containerPort: 5050
            - containerPort: 8050
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
