basic_services/jobs/outer_jobs/db_synchronizer/prod/01-db-synchronizer-service.prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: "db-synchronizer"
  namespace: "leaf-image-management-system"
  labels:
    app: "db-synchronizer"
spec:
  selector:
    app: "db-synchronizer"
  type: NodePort
  ports:
    - port: 5050
      targetPort: 5050
      nodePort: 30552
      protocol: TCP
      name: job-port
    - name: metrics
      protocol: TCP
      port: 8050
      targetPort: 8050
      nodePort: 30051
