basic_services/jobs/outer_jobs/db_synchronizer/prod/02-db-synchronizer-ingress.prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-synchronizer-ingress
  namespace: leaf-image-management-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: db-synchronizer
                port:
                  number: 5050
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: db-synchronizer
                port:
                  number: 8050
